2009-01-05  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.4 ===

2009-01-05  Dan Winship  <danw@gnome.org>

	* gdesktopappinfo.c (update_mimeapps_list): cast a "char **" to
	"const char **" to avoid a warning.

	* gemblem.c (g_emblem_from_tokens):
	* gemblemedicon.c (g_emblemed_icon_from_tokens):
	* xdgmime/xdgmime.c (xdg_mime_get_icon): remove unused
	variables

2009-01-05  Matthias Clasen <mclasen@redhat.com>

	Bug 566064 – Add NOATIME flag to query_info_flags

	* glocalfileinfo.c (get_content_type): Try using O_NOATIME when
	sniffing for mime types. Based on a patch by A. Walton

2009-01-05  Ryan Lortie  <desrt@desrt.ca>

	* tests/.gitignore: improve
	* tests/Makefile.am: add new simple-async-result test
	* tests/simple-async-result.c: new file to test GSimpleAsyncResult

2009-01-05  Ryan Lortie  <desrt@desrt.ca>

	* gio.symbols:
	* ../docs/reference/gio/gio-sections.txt:
	* gsimpleasyncresult.h:
	* gsimpleasyncresult.c: Add g_simple_async_result_is_valid().
	Implementation by Dan Winship.  Closes #566170.

2008-12-31  Matthias Clasen <mclasen@redhat.com>

	* gdesktopappinfo.c:
	* gunixmounts.c:
	* gunixinputstream.c:
	* gunixoutputstream.c: Add a note about being UNIX-specific.

2008-12-15  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.19.3 ===

2008-12-12  Dan Winship  <danw@gnome.org>

	* pltcheck.sh: make this work on x86_64

2008-12-12  Ryan Lortie  <desrt@desrt.ca>

	* gio/gicon.c (g_icon_to_string_tokenized): free the tokens when done
	with them

2008-12-12  Ryan Lortie  <desrt@desrt.ca>

	* gio/gunixmounts.c (g_unix_mount_at): fix leak that occurs when
	multiple mount entries match the requested path

2008-12-10  Alexander Larsson  <alexl@redhat.com>

	Bug 562452 - Ensure we return G_IO_ERROR_CANCELLED if cancelling
	g_simple_async_result_run_in_thread
	
        * gsimpleasyncresult.c:
	Make g_simple_async_result_run_in_thread check cancellation before
	calling out to the user in the callback. This means we guarantee